# Ziki

./: ARM_Mac显卡加速画质调节_20250917_141511.md  CompressO拖拽功能和Tauri权限配置分析.md  LICENSE  README.md  README.zh.md  Windows显卡加速画质调节_20250917_142946.md  package.json  pnpm-lock.yaml  tailwind.config.js  test.html  test_frame_generation.sh  ui-tailwind-preview.html  untitled.html  untitled4.html  vite.config.ts  视频格式与编码格式对照表.md  进度条3.html
assets/screenshots/: demo.avif
docs/: image-compression-plan.md  task-queue-and-status.md
src/: App.vue  main.ts  style.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: demo.rs  lib.rs
src-tauri/src/image/: compression.rs
src-tauri/src/video/: compression.rs  frames.rs  mod.rs  types.rs  utils.rs
src/components/: CodecDetector.vue  FileUploader.vue  FrameSelector.vue  LanguageSwitcher.vue  LogPanel.vue  OutputFolder.vue  TaskList.vue  Toolbar.vue  VideoComparison.vue  VideoPreview.vue
src/components/common/: CustomNumberInput.vue  (+1 more)
src/composables/: useBatchProcessor.ts  useComparison.ts  useFileHandler.ts  useTaskStateController.ts  useTheme.ts  useVideoFormats.ts
src/config/: qualityMappings.ts  videoFormats.json
src/i18n/: index.ts
src/layouts/: AppLayout.vue  FooterBar.vue  HeaderBar.vue  MainContent.vue
src/locales/: en.ts  zh.ts
src/stores/: useGlobalSettingsStore.ts  useLogStore.ts  useTaskSettingsStore.ts  useTaskStore.ts  useVideoPreviewStore.ts
src/types/: videoFormats.ts
src/utils/: ssim.ts
(+20 files in other folders)
